--- a/css/responsive.css
+++ b/css/responsive.css
@@ -198,7 +198,12 @@
     }
     
     .logo {
-        font-size: 20px;
+        font-size: 24px;
+        letter-spacing: 2px;
+    }
+    
+    .logo:hover {
+        transform: none;
     }
     
     .nav-actions {
